{
  "version": 4,
  "terraform_version": "1.0.8",
  "serial": 81,
  "lineage": "284220a8-c7cf-17e4-ea1e-83e3763b910b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terraform_IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:670825777589:internet-gateway/igw-0555014c410e4c648",
            "id": "igw-0555014c410e4c648",
            "owner_id": "670825777589",
            "tags": {
              "Name": "terraform_IGW"
            },
            "tags_all": {
              "Name": "terraform_IGW"
            },
            "vpc_id": "vpc-0815a4c32b0db39bb"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform_routeTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:670825777589:route-table/rtb-0d3bc52815c8c618c",
            "id": "rtb-0d3bc52815c8c618c",
            "owner_id": "670825777589",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0555014c410e4c648",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform_routeTable"
            },
            "tags_all": {
              "Name": "terraform_routeTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0815a4c32b0db39bb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.terraform_IGW",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform_routeTable_association1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c3b8d2431f554dea",
            "route_table_id": "rtb-0d3bc52815c8c618c",
            "subnet_id": "subnet-08b3e25d2d3de841b"
          },
          "dependencies": [
            "aws_internet_gateway.terraform_IGW",
            "aws_route_table.terraform_routeTable",
            "aws_subnet.terraform_subnet1",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform_routeTable_association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0964073db67be54a5",
            "route_table_id": "rtb-0d3bc52815c8c618c",
            "subnet_id": "subnet-0ef7dd03c74a97cf7"
          },
          "dependencies": [
            "aws_internet_gateway.terraform_IGW",
            "aws_route_table.terraform_routeTable",
            "aws_subnet.terraform_subnet2",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform_securityGroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:670825777589:security-group/sg-0a14e056fc1f3bcba",
            "description": "Allow HTTP and SSH traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a14e056fc1f3bcba",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all incoming traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow incoming HTTP connections",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow incoming HTTPS connections",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow incoming SSH connections",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform_securityGroup",
            "name_prefix": "",
            "owner_id": "670825777589",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform_securityGroup"
            },
            "tags_all": {
              "Name": "terraform_securityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0815a4c32b0db39bb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraform_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:670825777589:subnet/subnet-08b3e25d2d3de841b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08b3e25d2d3de841b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "670825777589",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform_subnet1"
            },
            "tags_all": {
              "Name": "terraform_subnet1"
            },
            "vpc_id": "vpc-0815a4c32b0db39bb"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraform_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:670825777589:subnet/subnet-0ef7dd03c74a97cf7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ef7dd03c74a97cf7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "670825777589",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform_subnet2"
            },
            "tags_all": {
              "Name": "terraform_subnet2"
            },
            "vpc_id": "vpc-0815a4c32b0db39bb"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:670825777589:vpc/vpc-0815a4c32b0db39bb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-068bdf083dc345196",
            "default_route_table_id": "rtb-00367096d76fbfee4",
            "default_security_group_id": "sg-0d2d1a3e867f0b17a",
            "dhcp_options_id": "dopt-0261c8aa926a61e08",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0815a4c32b0db39bb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00367096d76fbfee4",
            "owner_id": "670825777589",
            "tags": {
              "Name": "new",
              "project": "sprints-new"
            },
            "tags_all": {
              "Name": "new",
              "project": "sprints-new"
            }
          }
        }
      ]
    }
  ]
}